--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -2,17 +2,17 @@
     background-color: #aeaeae;
     display: flex;
     justify-content: space-around;
-    width: 100vw;
+    width: 100%;
     ul {
         list-style-type: none;
-
         li {
             a {
                 display: block;
                 padding: 10px;
                 text-decoration: none;
+                font-weight: bold;
+                color:black;
             }
-
             :hover {
                 background-color: #d9d9d9;
             }
