--- a/src/home.scss
+++ b/src/home.scss
@@ -1,27 +1,12 @@
 $select-hover-color : #f9815c;
 $list-option-backgroud: #efefef;
 
-.grid-container {
-    background-color: whitesmoke;
-    width: 100%;
-    height: 500px;
-    display: grid;
-    grid-template-columns: 1fr auto 5fr;
-
-    button {
-        margin: 25px;
+.grid-container{
+    img{
+        max-width: 100%;
+        // max-height: 700px;
+        object-fit: fill;
     }
-}
-
-#shop-now-div {
-    grid-column: 2 / 3;
-    display: flex;
-    flex-direction: column;
-    width: fit-content;
-    text-align: center;
-    justify-content: center;
-    margin-left: 100px;
-    margin-top: 100px;
 }
 
 /* free ship css starts here*/
