Dt 18feb after changes

--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #aeaeae;
+    background-color: #e7dede;
     display: flex;
     justify-content: space-around;
     width: 100%;
