--- a/src/register.scss
+++ b/src/register.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 .box-container{
