--- a/src/home.scss
+++ b/src/home.scss
@@ -2,8 +2,8 @@ $select-hover-color: #f9815c;
 $list-option-backgroud: #efefef;
 
 #search-bar {
-  height: 500px;
-  background-image: url('./images/book.jpeg');
+  height: 80vh;
+  background-image: url("./images/book.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
