--- a/src/bookDetails.scss
+++ b/src/bookDetails.scss
@@ -1,54 +1,86 @@
-.bookDetail{
-    height: 100vh;
-    width:100%;
-    background-color: #f2f2f2; 
+body {
+  background-color: #f2f2f2;
 }
-navbar{
-    display:flex;
-    justify-content: center;
-    background-color: #d9d9d9;
+.bookDetail {
+  height: 100%;
+  width: 100%;
 }
-
-.container{
-    display:flex;
-    justify-content: space-around;
-    flex-flow: row;
-    flex-wrap: wrap;
+navbar {
+  display: flex;
+  justify-content: center;
+  background-color: #d9d9d9;
 }
 
-.bookCover{
-    height:40vh;
-    width:15vw;
-    background-color: #d9d9d9;
+.main {
+  display: flex;
+  margin: 0 auto;
+  max-width: 70%;
+  .bookCover {
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.book-data{
-    background-color: #cbf1f1;
-    width: 50vw;
-    display: flex;
-    flex-flow: column;
-    // justify-content: space-evenly;
-    #rating-details{
-        list-style: none;
-        display:flex;
-        flex-flow:row;
-        justify-content: space-evenly;
+    margin-top: 4em;
+    max-width: 60%;
+    margin-right: 1em;
+    img {
+      max-height: 250px;
+      max-width: 40%;
+      margin: 0em 1.5em;
     }
-}
+    .book-data {
+      max-width: 100%;
+      .small_title {
+        margin: 0.4em 0;
+        color: #999999;
+        font-size: 18px;
+      }
+      .author_name {
+        font-size: 18px;
+      }
+      #description {
+        line-height: 21px;
+        font-size: 16px;
+      }
 
-.geners-data{
-    display:flex;
-    flex-flow:column;
-    background-color: #d9d9d9;
-    width:30vw;
-}
-.comments{
-    width: 60vw;
-    height: 40vh;
-    margin-top: 20px;
-    margin-right: 100px;
-    background-color: #d9d9d9;
+      ul {
+        display: flex;
+        li {
+          margin: 0.5em 2em 0.5em 0;
+          list-style-type: none;
+          color: #00635d;
+        }
+      }
+    }
+  }
+  .authorInfo {
+    display: flex;
+    max-width: 30%;
+    margin-top: 4em;
+    flex-direction: column;
+    .dummy_text {
+      font-size: 18px;
+      font-weight: bold;
+    }
+    .author_details {
+      display: flex;
+      align-items: center;
+      margin-top: 0.6em;
+      margin-bottom: 1em;
+      border-top: solid 1px #ccc;
+      padding-top: 1em;
+      p {
+        font-size: 22px;
+        font-weight: bold;
+      }
+      .author-profile {
+        background-size: cover;
+        border-radius: 50%;
+        width: 75px;
+        height: 75px;
+        margin-right: 1.5em;
+      }
+    }
+    p {
+      font-size: 14px;
+      line-height: 21px;
+    }
+  }
 }
