--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -7,7 +7,7 @@ $list-option-backgroud: #efefef;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  margin-top: 10px;
+  // margin-top: 10px;
 }
 
 /* free ship css starts here*/
