--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-    margin-top: 10px;
+    // margin-top: 10px;
     background-color: #e7dede;
     display: flex;
     justify-content: space-between;
