--- a/react-ui/src/styles/navbar.scss
+++ b/react-ui/src/styles/navbar.scss
@@ -1,9 +1,8 @@
 .navbar {
-    // margin-top: 10px;
     background-color: #e7dede;
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: auto;
 
     ul {
         list-style-type: none;
@@ -11,28 +10,51 @@
         li {
             a {
                 display: block;
-                padding: 15px;
+                padding: 20px 10px;
                 text-decoration: none;
-                font-weight: bold;
                 color: black;
+                font-size: large;
             }
 
             :hover {
-                background-color: #d9d9d9;
+                text-decoration: underline;
             }
         }
     }
 
+    p {
+        display: block;
+        padding: 20px 10px;
+        text-decoration: none;
+        color: black;
+        font-size: large;
+        width: max-content;
+        margin-right: 70px;
+    }
 }
 
 #menu-left {
     display: flex;
     width: fit-content;
-    padding: 0px 0px 0px 50px;
+    padding-left: 50px;
 }
 
-#menu-right {
+#menu-right div {
     display: flex;
-    width: fit-content;
-    padding: 0px 50px 0px 0px;
+    padding-right: 50px;
+}
+
+#username {
+    li {
+        display: block;
+        padding: 20px 10px;
+        text-decoration: none;
+        color: black;
+        font-size: large;
+    }
+
+    :hover {
+        text-decoration: underline;
+        cursor: pointer;
+    }
 }
